# Ontologist

./: .env.example  .gitignore  README.md  pyproject.toml
config/: pass1.default.toml
scripts/: run_pass1.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/consolidation/: __init__.py  class_consolidator.py
src/export/: __init__.py  schema_profile_exporter.py
src/extraction/: __init__.py  chunk_llm_extractor.py
src/loading/: __init__.py  chroma_chunk_loader.py
src/models/: __init__.py  schema_candidates.py
src/pipeline/: pass1_runner.py
src/prompts/: __init__.py  schema_candidate_extraction.py
tests/: README.md  conftest.py  test_chroma_loader.py  test_class_consolidation.py  test_extraction.py  test_models.py  test_relationship_consolidation.py  test_run_loop.py  test_schema_export.py
